--- a/src/frontend/css/components/entities/folder.css
+++ b/src/frontend/css/components/entities/folder.css
@@ -4,12 +4,16 @@ folder-card {
     display: flex;
     align-items: center;
     padding: 10px;
-    background-color: var(--card);
+    background-color: var(--folder);
     border-radius: 10px;
     color: var(--icon);
     opacity: 0;
     transform: translateY(30%);
     transition: opacity .7s ease, transform .25s ease, scale .2s ease;
+}
+
+#folder-icon {
+    color: #5c7fdd;
 }
 
 folder-card:hover {
@@ -36,7 +40,7 @@ recent-folder-card {
     display: flex;
     align-items: center;
     padding: 10px;
-    background-color: var(--card);
+    background-color: var(--folder);
     border-radius: 10px;
     color: var(--icon);
     opacity: 0;
