--- a/src/frontend/css/general/themes.css
+++ b/src/frontend/css/general/themes.css
@@ -135,7 +135,7 @@
     --toolbar-btn-text: #4f578f;
     --hover-toolbar-btns: rgba(185, 198, 250, 0.5);
     --editor-text: #383838;
-    --hover-slash-command: #f3f4f8;
+    --hover-slash-command: #f4f4fc;
     --file-path: #a0a6c1;
     /*Borders*/
     --border-notification: #f3f5fb;
