--- a/src/frontend/css/textEditor/toolbarTop.css
+++ b/src/frontend/css/textEditor/toolbarTop.css
@@ -34,13 +34,13 @@
 
 .editor-options-dropdown {
     overflow: visible;
-    cursor: pointer;
     transition: 150ms;
     height: 34px;
 }
 
 #editor-options-btn {
     padding: 0 10px;
+    cursor: pointer;
     border-radius: 7px;
     height: 100%;
     display: flex;
@@ -56,7 +56,32 @@
     display: flex;
     flex-direction: column;
     width: 200px;
-    right: 40px;
+    right: 10px;
+    top: 40px;
+    border-radius: 10px;
+    padding: 10px;
+    font-size: 16px;
+    transition: 150ms;
+    z-index: 2;
+    box-shadow: var(--shadow-card);
+}
+
+.recently-viewed-notes-dropdown {
+    position: relative;
+    overflow: visible;
+    transition: 150ms;
+}
+
+.recently-viewed-notes-dropdown .options{
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    background-color: var(--editor-dropdown);
+    display: flex;
+    flex-direction: column;
+    width: 350px;
+    left: 0px;
+    top: 40px;
     border-radius: 10px;
     padding: 10px;
     font-size: 16px;
@@ -66,7 +91,6 @@
 }
 
 .editor-options-dropdown .options button {
-    
     display: flex;
     align-items: center;
     font-size: 15px;
@@ -86,55 +110,6 @@
 .editor-options-dropdown button:hover {
     background-color: var(--hover);
     color: #5c7dff;
-}
-
-.templates-dropdown .options {
-    position: absolute;
-    background-color: var(--editor-dropdown);
-    border-radius: 10px;
-    width: 250px;
-    max-height: 350px;
-    padding: 30px 20px;
-    display: flex;
-    flex-direction: column;
-    z-index: 2;
-    top: 0px;
-    right: 40px;
-    transition: 100ms;
-    visibility: hidden;
-    opacity: 0;
-    box-shadow: var(--shadow-card);
-}
-
-.templates-dropdown .options span {
-    
-    font-weight: 600;
-    font-size: 22px;
-    color: var(--important);
-    margin-bottom: 10px;
-}
-
-.templates-container {
-    overflow-y: scroll;
-    padding: 0;
-}
-
-.templates-container li {
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    font-family: Roboto;
-    font-weight: 600;
-    margin: 10px;
-    border-radius: 5px;
-    padding: 10px 7px;
-    color: var(--text);
-    transition: 150ms;
-}
-
-.templates-container li:hover {
-    background-color: var(--hover);
-    color: #5c7fdd;
 }
 
 .save-note-btn:hover,
