--- a/src/frontend/css/general/themes.css
+++ b/src/frontend/css/general/themes.css
@@ -92,7 +92,7 @@
     --scrollbar-content-view: #3f4045;
     --stats-background: #141322;
     --home-tab: #28283b;
-    --options-menu: #15142d;
+    --options-menu: #141322;
 
     /*Feedback variables*/
     --completed-checklist-task: #1c1d3b;
