the sidebar can now be without a border in the settings tab. And the options menu for folders and notes have been changed

--- a/src/frontend/css/general/main.css
+++ b/src/frontend/css/general/main.css
@@ -176,8 +176,9 @@ textarea::placeholder {
 
 .options-menu {
     position: absolute;
-    top: -120px;
-    background-color: var(--options-menu);
+    top: -110px;
+    left: 0;
+    background-color: var(--background);
     color: var(--text);
     width: 100%;
     padding: 10px;
@@ -197,7 +198,7 @@ textarea::placeholder {
 }
 
 .options-menu div:hover {
-    background-color: var(--hover);
+    background-color: var(--hover-sidebar);
     color: var(--hover-text);
 }
 
