--- a/src/frontend/css/general/themes.css
+++ b/src/frontend/css/general/themes.css
@@ -66,7 +66,7 @@
     --notification: #0f0e1a;
     --subtitle: #9196aa;
     --sidebar: #0b0a14; 
-    --sidebar-soft: #0f0e1a;
+    --sidebar-soft: #0d0c18;
     --searchbar: #121223;
     --sidebar-text: #d6d8e5;
     --sidebar-text-hover: #5c7fdd; 
@@ -173,7 +173,7 @@
     --notification: #f9fafd;
     --subtitle: #2f3773;
     --sidebar: #ffffff; 
-    --sidebar-soft: #fafafd;
+    --sidebar-soft: #ffffff;
     --searchbar: #f4f4fc;
     --sidebar-text: #444452; 
     --sidebar-text-hover: #1d2134; 
