--- a/src/frontend/css/textEditor/toolbarTop.css
+++ b/src/frontend/css/textEditor/toolbarTop.css
@@ -41,6 +41,7 @@
 
 #editor-options-btn {
     padding: 0 10px;
+    color: var(--text);
     cursor: pointer;
     border-radius: 7px;
     height: 100%;
