--- a/src/frontend/css/views/sticky_note/stickyWallHomeView.css
+++ b/src/frontend/css/views/sticky_note/stickyWallHomeView.css
@@ -2,7 +2,6 @@
     outline: none;
     height: calc(100dvh - 37px);
     max-height: calc(100dvh - 37px);
-    font-family: Roboto;
     display: flex;
     flex-direction: column;
     padding: 0 5%;
@@ -11,9 +10,121 @@
     transition: opacity .7s ease, transform .2s ease;
 }
 
-.sticky-wall-cards {
-    max-height: 500px;
-    overflow-y: scroll;
-    padding: 10px 40px;
+.sticky-boards {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-rows: repeat(auto-fill, 200px);
+    gap: 20px;
 }
 
+sticky-board {
+    cursor: pointer;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    box-shadow: 5px 5px 18px #eaecf7;
+    border-radius: 10px;
+    transition: 200ms;
+}
+
+sticky-board:hover {
+    scale: 1.05;
+}
+
+sticky-board i {
+    margin: auto;
+    font-size: 30px;
+    color: #5c7fdd;
+}
+
+sticky-board div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+sticky-board p {
+    margin: 0;
+}
+
+sticky-board span {
+    color: #c9ccdc;
+}
+
+
+.context-text {
+    color: var(--text);
+    margin: 0 0 50px 0px;
+    max-width: 300px;
+}
+
+.presentation-text-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.add-sticky-board-btn {
+    background-color: var(--button1-bg);
+    border-radius: 5px;
+    padding: 10px 0;
+    color: var(--important);
+}
+
+.add-sticky-board-btn:hover {
+    background-color: var(--button1-hover);
+}
+
+/* _________________________ art code ______________________________*/
+
+.sticky-image-container {
+    width: 220px;
+    height: 220px;
+    position: relative;
+    display: flex;
+    align-items: end;
+}
+
+.sticky-one {
+    position: absolute;
+    rotate: 5deg;
+    border-radius: 10px ;
+    width: 220px;
+    height: 220px;
+    background-color: rgb(177, 209, 255);
+}
+
+.sticky-two {
+    position: absolute;
+    rotate: 10deg;
+    border-radius: 10px ;
+    width: 190px;
+    height: 190px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(141, 177, 255);
+}
+
+.sticky-two .line {
+    height: 7px;
+    border-radius: 5px;
+    background-color: rgb(91, 125, 224);
+}
+
+.pin {
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background-color: var(--background);
+    z-index: 1;
+    top: 20px;
+    left: 20px;
+}
+
+.sticky-presentation {
+    display: flex;
+    align-items: end;
+    column-gap: 50px;
+}
